--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -26,3 +26,250 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+
+
+.button_small {
+  height: 31px !important;
+  font-size: 14px !important;
+  padding: 0.25rem 0.5rem !important
+}
+.button_medium {
+  height: 38px !important;
+  font-size: 16px !important;
+  padding: 0.375rem 0.75rem !important
+}
+.button_large {
+  height: 48px !important;
+  font-size: 20px !important;
+  padding: 0.5rem 1rem !important
+}
+
+.button_default {
+background-color: #F5F5F5 !important; 
+color: #333333 !important;
+border-color: #ffffff00 !important;
+}
+.button_default:disabled {
+  background-color: #F5F5F5 !important; 
+  color: #BCBCBC !important;
+  border-color: #ffffff00 !important;
+  }
+
+.button_primary {
+  background-color: #14BDCC !important; 
+  color: white !important;
+  border-color: #ffffff00 !important;
+}
+.button_primary:disabled {
+  background-color: #14bdcc4d !important; 
+  color: white !important;
+  border-color: #ffffff00 !important;
+}
+
+.button_primary:active {
+  color: #09ADBF !important; 
+  background-color: white !important;
+  border-color: #14BDCC !important;  
+}
+
+.button_success {
+  background-color: #28a745 !important; 
+  color: white !important;
+  border-color: #ffffff00 !important; 
+}
+.button_danger{
+  background-color: #f24030 !important; 
+  color: white !important;
+  border-color: #ffffff00 !important;
+}
+.button_warning{
+  background-color: #fadf32 !important; 
+  color: #333333 !important;
+  border-color: #ffffff00 !important;
+}
+
+.button_warning:active {
+  color: #E6BF22 !important; 
+  background-color: white !important;
+  border-color: #fadf32 !important;
+}
+
+.button_link {
+  color: #09ADBF !important; 
+  background-color: #ffffff00 !important;
+  border-color: #ffffff00 !important;
+}
+
+.button_list {
+  color: #333333 !important; 
+  background-color: #ffffff !important;
+  border-color: #333333 !important;
+}
+.button_list:active {
+  background-color: #14BDCC !important; 
+  color: white !important;
+  border-color: #ffffff00 !important;
+}
+
+.button_download {
+  height: auto !important;
+  width: 250px !important;  
+  white-space: pre-wrap !important;
+  padding: 10px !important;
+  font-size: 14px !important;
+  color: #333333 !important; 
+  background-color: #ffffff !important;
+  border-color: #dddddd !important;
+}
+.button_group2 {
+  color: #09ADBF !important; 
+  background-color: white !important;
+  border-color: #14BDCC !important;  
+}
+
+.iconbutton_1 {
+  background-color: #ffffff !important; 
+  border-color: #ffffff !important;
+}
+
+.iconbutton_2 {
+  background-color: #F5F5F5 !important; 
+  border-color: #ffffff00 !important;
+}
+
+.iconbutton_3 {
+  color: #3cbccb !important;
+  background-color: #F5F5F5 !important; 
+  border-color: #ffffff00 !important;
+}
+.iconbutton_4 {
+  height: auto !important;
+  padding: 10px !important;  
+  color: #3cbccb !important;
+  background-color: #ffffff !important; 
+  border-color: #dddddd !important;
+}
+
+.icon_light {
+  max-width: 20px !important;
+  max-height: 24px !important;
+  background-color: #ffffff00 !important;
+  border-color: #ffffff00 !important;
+}
+
+.dropdown_default {
+  width: 150px !important;
+  height: 38px !important;
+  background-color: white !important;
+  color: #333333 !important;  
+}
+.dropdown_default:disabled {
+  background-color: #F5F5F5 !important; 
+  color: #BCBCBC !important;
+}
+.dropdown_default:active {
+  color: #09ADBF !important; 
+  background-color: white !important;
+  border-color: #14BDCC !important;
+}
+
+.dropdown_primary {
+  width: 150px !important;
+  height: 38px !important;
+  background-color: #14BDCC !important;
+  color: white !important;  
+  border-color: #ffffff00 !important;
+}
+.dropdown_primary:disabled {
+  background-color: #14bdcc4d !important; 
+  color: white !important;
+}
+.dropdown_primary:active {
+  color: #09ADBF !important; 
+  background-color: white !important;
+  border-color: #14BDCC !important;  
+}
+
+.topnav_bar {
+  box-shadow: 0 6px 6px -4px rgba(0, 0, 0, 0.19) !important;
+}
+
+.topnav_bar_item {
+  height: 65px !important;
+  font-size: 16px;
+}
+.topnav_bar_iconitem {
+  height: 65px !important;
+}
+.icon_topnavbar {
+  height: 65px !important;
+  width: 65px !important;
+  padding-left: 10px !important;
+}
+.icon_topnavbar
+svg {
+  height: 65px !important;
+  width: 20px !important;
+}
+.ava_topnavbar {
+  height: 65px !important;
+}
+.ava_topnavbar
+img {
+  height: 38px !important;
+  width: 38px !important;
+}
+
+.input_default {
+  height: 38px !important;
+  margin-bottom: 10px !important;
+}
+.input_default:active {
+  height: 38px !important;
+  margin-bottom: 10px !important;
+  background-color: #ffffff !important; 
+  border-color: #14BDCC !important;
+}
+.input_mustfill {
+  background-color: #ffffff !important; 
+  color: #f24030 !important;
+  border-color: #f24030 !important;
+}
+.input_mustfill_text{
+  color: #f24030 !important;
+  line-height: 12px*1.5;
+}
+
+.ant-input-group-addon {
+  height: 38px !important;
+}
+
+.ant-btn.ant-dropdown-trigger {
+  width: 150px !important;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ant-btn-group {
+  display: flex !important;
+  justify-content: stretch !important;
+}
+.ant-btn-group.ant-btn-icon-only
+iconbutton_4 {
+  height: auto !important;
+}
+
+.ant-menu-item {
+  vertical-align: text-top !important;
+}
+.ant-menu-item-selected {
+  border-bottom: 2px solid #14BDCC !important;
+  color: #14BDCC !important;
+}
+.ant-menu-item-active{
+  border-bottom: 2px solid #14BDCC !important;
+  color: #14BDCC !important;
+}
+
